--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "asyncpg>=0.30.0",
   "fastapi>=0.116.0",
   "feedparser>=6.0.11",
+  "httpx>=0.28.1",
   "jinja2>=3.1.5",
   "pydantic-settings>=2.10.1",
   "redis>=6.1.0",
@@ -25,7 +26,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-  "httpx>=0.28.1",
+  "alembic>=1.16.4",
   "mypy>=1.17.0",
   "pytest>=8.4.1",
   "pytest-asyncio>=1.1.0",
@@ -47,7 +48,7 @@ src = ["src", "tests"]
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP"]
-ignore = ["E501"]
+ignore = ["B008", "E501"]
 
 [tool.ruff.format]
 quote-style = "double"
@@ -67,3 +68,7 @@ warn_unused_ignores = true
 disallow_untyped_defs = true
 no_implicit_optional = true
 strict_equality = true
+
+[[tool.mypy.overrides]]
+module = ["feedparser", "feedparser.*"]
+ignore_missing_imports = true
