Implement scheduler and worker queue orchestration

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ SIFT_HOST=0.0.0.0
 SIFT_PORT=8000
 SIFT_DATABASE_URL=sqlite+aiosqlite:///./sift.db
 SIFT_REDIS_URL=redis://redis:6379/0
+SIFT_INGEST_QUEUE_NAME=ingest
+SIFT_SCHEDULER_POLL_INTERVAL_SECONDS=30
+SIFT_SCHEDULER_BATCH_SIZE=200
 SIFT_AUTO_CREATE_TABLES=false
 SIFT_PLUGIN_PATHS=["sift.plugins.builtin.noop:NoopPlugin"]
 
