--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ SIFT_REDIS_URL=redis://redis:6379/0
 SIFT_INGEST_QUEUE_NAME=ingest
 SIFT_SCHEDULER_POLL_INTERVAL_SECONDS=30
 SIFT_SCHEDULER_BATCH_SIZE=200
+SIFT_AUTH_SESSION_COOKIE_NAME=sift_session
+SIFT_AUTH_SESSION_TTL_DAYS=30
+SIFT_AUTH_COOKIE_SECURE=false
 SIFT_AUTO_CREATE_TABLES=false
 SIFT_PLUGIN_PATHS=["sift.plugins.builtin.noop:NoopPlugin"]
 
