--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,15 @@ license = { text = "MIT" }
 authors = [{ name = "Sift Contributors" }]
 dependencies = [
   "aiosqlite>=0.20.0",
+  "argon2-cffi>=25.1.0",
   "asyncpg>=0.30.0",
+  "email-validator>=2.3.0",
   "fastapi>=0.116.0",
   "feedparser>=6.0.11",
   "httpx>=0.28.1",
   "jinja2>=3.1.5",
   "pydantic-settings>=2.10.1",
+  "python-multipart>=0.0.20",
   "redis>=6.1.0",
   "rq>=2.6.0",
   "sqlalchemy>=2.0.41",
