Add stream classifier plugin foundation for keyword streams

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ SIFT_AUTH_SESSION_COOKIE_NAME=sift_session
 SIFT_AUTH_SESSION_TTL_DAYS=30
 SIFT_AUTH_COOKIE_SECURE=false
 SIFT_AUTO_CREATE_TABLES=false
-SIFT_PLUGIN_PATHS=["sift.plugins.builtin.noop:NoopPlugin"]
+SIFT_PLUGIN_PATHS=["sift.plugins.builtin.noop:NoopPlugin","sift.plugins.builtin.keyword_heuristic_classifier:KeywordHeuristicClassifierPlugin"]
 
