--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,11 @@ SIFT_AUTH_SESSION_COOKIE_NAME=sift_session
 SIFT_AUTH_SESSION_TTL_DAYS=30
 SIFT_AUTH_COOKIE_SECURE=false
 SIFT_AUTO_CREATE_TABLES=false
+SIFT_DEV_SEED_ENABLED=false
+SIFT_DEV_SEED_DEFAULT_USER_EMAIL=dev@sift.local
+SIFT_DEV_SEED_DEFAULT_USER_PASSWORD=devpassword123!
+SIFT_DEV_SEED_DEFAULT_USER_DISPLAY_NAME=Dev User
+SIFT_DEV_SEED_OPML_PATH=
+SIFT_DEV_SEED_MONITORING_FOLDER_NAME=Monitoring feeds
 SIFT_PLUGIN_PATHS=["sift.plugins.builtin.noop:NoopPlugin","sift.plugins.builtin.keyword_heuristic_classifier:KeywordHeuristicClassifierPlugin"]
 
