--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
       - .env
     environment:
       SIFT_DATABASE_URL: postgresql+asyncpg://sift:sift@db:5432/sift
+      SIFT_DEV_SEED_ENABLED: "true"
+      SIFT_DEV_SEED_DEFAULT_USER_EMAIL: dev@sift.local
+      SIFT_DEV_SEED_DEFAULT_USER_PASSWORD: devpassword123!
+      SIFT_DEV_SEED_DEFAULT_USER_DISPLAY_NAME: Dev User
+      SIFT_DEV_SEED_OPML_PATH: /app/dev-data/local-seed.opml
     depends_on:
       - db
       - redis
