Implement reader UI and API foundation; add planning docs for React refactor

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
   "workspaceFolder": "/workspaces/sift",
   "shutdownAction": "stopCompose",
   "overrideCommand": false,
-  "postCreateCommand": "uv sync --dev",
+  "postCreateCommand": "uv sync --extra dev",
   "customizations": {
     "vscode": {
       "extensions": [
