--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile
-    command: /bin/sh -c "uv run alembic upgrade head && uv run uvicorn sift.main:app --host 0.0.0.0 --port 8000 --reload"
+    command: /bin/sh -c "uv run --extra dev alembic upgrade head && uv run uvicorn sift.main:app --host 0.0.0.0 --port 8000 --reload"
     volumes:
       - ..:/app
     environment:
