--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app:
     build: .
-    command: /bin/sh -c "uv run alembic upgrade head && uv run uvicorn sift.main:app --host 0.0.0.0 --port 8000 --reload"
+    command: /bin/sh -c "uv run --extra dev alembic upgrade head && uv run uvicorn sift.main:app --host 0.0.0.0 --port 8000 --reload"
     ports:
       - "8000:8000"
     volumes:
