--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,9 @@ SIFT_DEV_SEED_DEFAULT_USER_PASSWORD=devpassword123!
 SIFT_DEV_SEED_DEFAULT_USER_DISPLAY_NAME=Dev User
 SIFT_DEV_SEED_OPML_PATH=
 SIFT_DEV_SEED_MONITORING_FOLDER_NAME=Monitoring feeds
+SIFT_CORS_ALLOW_ORIGINS=["http://localhost:5173","http://127.0.0.1:5173"]
+SIFT_CORS_ALLOW_CREDENTIALS=true
+SIFT_CORS_ALLOW_METHODS=["*"]
+SIFT_CORS_ALLOW_HEADERS=["*"]
 SIFT_PLUGIN_PATHS=["sift.plugins.builtin.noop:NoopPlugin","sift.plugins.builtin.keyword_heuristic_classifier:KeywordHeuristicClassifierPlugin"]
 
