chore: finalize local stack setup and refresh next-step plan

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ SIFT_AUTH_SESSION_TTL_DAYS=30
 SIFT_AUTH_COOKIE_SECURE=false
 SIFT_AUTO_CREATE_TABLES=false
 SIFT_DEV_SEED_ENABLED=false
-SIFT_DEV_SEED_DEFAULT_USER_EMAIL=dev@sift.local
+SIFT_DEV_SEED_DEFAULT_USER_EMAIL=dev@sift.dev
 SIFT_DEV_SEED_DEFAULT_USER_PASSWORD=devpassword123!
 SIFT_DEV_SEED_DEFAULT_USER_DISPLAY_NAME=Dev User
 SIFT_DEV_SEED_OPML_PATH=
