feat(frontend): implement folder and reader workspace v1

--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,5 @@ pnpm-debug.log*
 # Local VS Code developer overrides (personal machine only)
 .vscode/extensions.local.json
 .vscode/settings.local.json
+
+private/
