--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   backend:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,9 +20,18 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
 
       - name: Sync dependencies
-        run: uv sync --extra dev
+        run: |
+          for attempt in 1 2 3; do
+            uv sync --extra dev && exit 0
+            echo "uv sync failed (attempt ${attempt}/3), retrying in 10s..."
+            sleep 10
+          done
+          echo "uv sync failed after 3 attempts"
+          exit 1
 
       - name: Ruff
         run: uv run ruff check .
@@ -34,6 +44,7 @@ jobs:
 
   frontend:
     runs-on: ubuntu-latest
+    timeout-minutes: 25
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -45,14 +56,25 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
 
       - name: Sync backend dependencies (for OpenAPI generation)
-        run: uv sync --extra dev
+        run: |
+          for attempt in 1 2 3; do
+            uv sync --extra dev && exit 0
+            echo "uv sync failed (attempt ${attempt}/3), retrying in 10s..."
+            sleep 10
+          done
+          echo "uv sync failed after 3 attempts"
+          exit 1
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "22"
+          cache: "pnpm"
+          cache-dependency-path: frontend/pnpm-lock.yaml
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -60,7 +82,14 @@ jobs:
           version: 10
 
       - name: Install frontend dependencies
-        run: pnpm --dir frontend install --frozen-lockfile
+        run: |
+          for attempt in 1 2 3; do
+            pnpm --dir frontend install --frozen-lockfile && exit 0
+            echo "pnpm install failed (attempt ${attempt}/3), retrying in 10s..."
+            sleep 10
+          done
+          echo "pnpm install failed after 3 attempts"
+          exit 1
 
       - name: Generate OpenAPI types
         run: pnpm --dir frontend run gen:openapi
