Polish desktop readability and track deferred mobile planning

--- a/.gitignore
+++ b/.gitignore
@@ -214,6 +214,7 @@ dev-data/local-seed.opml
 .pnpm-store/
 pnpm-debug.log*
 frontend/artifacts/
+artifacts/
 
 # Local VS Code developer overrides (personal machine only)
 .vscode/extensions.local.json
