Implement plugin registry runtime cutover baseline

--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,5 @@ SIFT_CORS_ALLOW_ORIGINS=["http://localhost:5173","http://127.0.0.1:5173"]
 SIFT_CORS_ALLOW_CREDENTIALS=true
 SIFT_CORS_ALLOW_METHODS=["*"]
 SIFT_CORS_ALLOW_HEADERS=["*"]
-SIFT_PLUGIN_PATHS=["sift.plugins.builtin.noop:NoopPlugin","sift.plugins.builtin.keyword_heuristic_classifier:KeywordHeuristicClassifierPlugin"]
+SIFT_PLUGIN_REGISTRY_PATH=config/plugins.yaml
 
