--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,9 @@ SIFT_CORS_ALLOW_CREDENTIALS=true
 SIFT_CORS_ALLOW_METHODS=["*"]
 SIFT_CORS_ALLOW_HEADERS=["*"]
 SIFT_PLUGIN_REGISTRY_PATH=config/plugins.yaml
+SIFT_PLUGIN_TIMEOUT_INGEST_MS=2000
+SIFT_PLUGIN_TIMEOUT_CLASSIFIER_MS=3000
+SIFT_PLUGIN_TIMEOUT_DISCOVERY_MS=5000
+SIFT_PLUGIN_TIMEOUT_SUMMARY_MS=5000
+SIFT_PLUGIN_DIAGNOSTICS_ENABLED=true
 
