Implement GitFlow CI/CD release pipeline and GHCR deployment assets

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "format:check": "node ./scripts/format-check-changed.mjs",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "test": "vitest run",
@@ -15,10 +16,10 @@
     "gen:openapi": "python ./scripts/export_openapi.py && openapi-typescript ./openapi.json --output ./src/shared/types/generated.ts"
   },
   "dependencies": {
-    "@fontsource/ibm-plex-sans": "^5.2.8",
-    "@fontsource/source-serif-4": "^5.2.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fontsource/ibm-plex-sans": "^5.2.8",
+    "@fontsource/source-serif-4": "^5.2.8",
     "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.5",
     "@tanstack/react-query": "^5.90.2",
@@ -43,6 +44,7 @@
     "globals": "^16.4.0",
     "jsdom": "^27.1.0",
     "openapi-typescript": "^7.10.1",
+    "prettier": "^3.8.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.2",
