--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,5 +49,11 @@
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.2",
     "vitest": "^4.0.8"
+  },
+  "pnpm": {
+    "overrides": {
+      "ajv": "^6.14.0",
+      "minimatch": "^10.2.1"
+    }
   }
 }
